# TRT-from-EYE-Data

./: .gitignore  README.md  concat.py  pyproject.toml  test.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
contextual-feature-pipeline/: 00_reconstruct.py  01_ner_pos.py  02_surprisal.py  03_aggregate.py  03_morph.py  04_aggregate.py  config_aggregate.py  config_morph.py  config_ner_pos.py  config_reconstruct.py  config_surprisal.py  main.py
contextual-feature-pipeline/output/: morph_features.csv  ner_pos_features.csv  reconstructed_pages.csv  surprisal_features.csv  test_features.csv  word_id_map.csv
data/: sample_output.csv  test_data.csv
data-info/: main.py
feature-pipeline/: main.py
lexical-feature-pipeline/: main.py
lexical-feature-pipeline/output/: test_features.csv
lightgbm-pipeline/: config_model.py  lightgbm_engineered.py  lightgbm_simple.py  train_model.py
neural-net-pipeline/: config_model.py  main.py  train_model.py
neural-net-pipeline/output/: best_model.pth  validation_report.txt
output/: clf_model.txt  model.txt  reg_model.txt  validation_report.txt
prompts/: pipeline-flow.md  team-flow.md
train-boosted-trees/: config_model.py  main.py  train_model.py
train-boosted-trees/output/: stacking_report.txt
train-pipeline/: config_model.py  main.py  main_.py  main_classifier.py  train_model.py
