[project]
name = "nitronlp-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightgbm>=4.6.0",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.14",
    "torch>=2.11.0",
    "transformers>=5.6.2",
    "wordfreq>=3.1.1",
]
